<resources>
    <string name="app_name">TimeFocus</string>
    <string name="empty" />

    <string name="action_add_no_name">No name or icon specified</string>
    <string name="unexpected_error">An unexpected error occurred</string>


    <string name="skip_button_text">Skip</string>

    <string name="action_status_active">Active</string>
    <string name="action_status_pause">Paused</string>
    <string name="action_status_stop">Stopped</string>
    <string name="action_status_error">Error</string>

    <string name="action_name_hint">Action name</string>

    <string name="action_suspend_text">Suspend others</string>
    <string name="action_suspend_all_text">Suspend all others</string>
    <string name="action_pomodoro_text">Pomodoro time management</string>
    <string name="action_pomodoro_long_text">Pomodoro a longer time</string>
    <string name="action_icon_color_text">Сolor icons</string>
    <string name="action_icon_text">Icons</string>
    <string name="action_add_button_description">Add action</string>
    <string name="icon_choice_title">Select an icon</string>
    <string name="press_back_exit">Press back again to exit!</string>

    <string name="action_name_edit_cancel_button_description">Cancel</string>
    <string name="action_name_edit_create_button_description">Create</string>

    <string name="action_group_text">Group</string>
    <string name="action_group_and_members_text">Group and members</string>
    <string name="action_name_edit_add_group_member_button_description">Add member to the group</string>
    <string name="action_add_members_for_group_title">Choose for the group</string>
    <string name="action_add_group_error">Group save error!</string>
    <string name="action_add_group_no_members">Nothing to add</string>
<!--    More Fragment   -->
    <string name="more_settings_button_text">Settings</string>
    <string name="more_help_button_text">Help</string>
    <string name="more_about_button_text">About</string>
    <string name="action_add_title">Adding action</string>
    <string name="action_back_name">Back</string>
    <string name="zero_text">0</string>
    <string name="action_mode_nothing">Nothing</string>
    <string name="action_mode_strict">Strict</string>
    <string name="action_mode_pause">Pause</string>
    <string name="app_about">TimeFocus vers. 1.0a</string>
    <string name="action_start_mode_text">Action start mode</string>

</resources>
