<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:orientation="vertical"
    android:padding="@dimen/indent_small">

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/more_settings_button_text"
        app:icon="@drawable/ic_icon_color_24" />

    <Button
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/more_help_button_text"
        app:icon="@drawable/ic_help_24" />

    <Button
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/more_about_button_text"
        app:icon="@drawable/ic_info_24" />
</LinearLayout>
